--- a/style.css
+++ b/style.css
@@ -12,12 +12,12 @@ body::before {
     content: "";
     position: absolute; z-index: 1;
     top: 0; right: 0; bottom: 0; left: 0;
-    background-color: rgb(66, 68, 187);
+    background-color: rgb(92, 94, 228);
 }
 
 .logo {position: relative; z-index: 2;}
 .logo h1 {
-    font-size: 40px; color: rgb(5, 34, 77);
+    font-size: 45px; color: rgb(5, 34, 77);
     text-align: center;
     margin-bottom: 30px;
 }
@@ -61,9 +61,10 @@ body::before {
 .btn_inquiry {margin-top: 30px;}
 .btn_inquiry button {
     width: 100%; height: 50px;
-    background-color: rgba(36, 19, 114, 0.856);
+    background-color: rgb(65, 40, 177);
     color: rgb(188, 187, 255);
     font-size: 20px;
+    font-weight: bold;
     border: none;
     border-radius: 25px;
     cursor: pointer;
