--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body::before {
 .nickname input:focus + label,
 .nickname input:valid + label{
     top: -2px;
-    font-size: 13px; color: #2362c0;
+    font-size: 13px; color: #5495f7;
 }
 
 .btn_inquiry {margin-top: 30px;}
