--- a/GameDi_st0.css
+++ b/GameDi_st0.css
@@ -18,19 +18,26 @@ body {
     opacity: 1;
 }
 
-.GameDi-button-image:hover img {
+.a:hover img {
+    cursor: pointer;
     opacity: 0.80;
     transform: scale(1.1);
-    -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
 }
 
-.GameDi-button-image:active img {
-    opacity: 0;
-    transform: scale(1.05);
+.a:active img {
+    opacity: 0.80;
+    transform: translateY(2px);
+    transition: all 0.3s;
 }
 
-.GameDi-button-image:visited img{
+.b img {
     opacity: 1;
-    transform: scale(2.05);
+    animation-name: move;
+    animation-duration: 0.6s;
+    animation-delay: 0;
+}
+@keyframes move{
+    from{transform: scale(1.1);}
+    to{transform: scale(1.8); opacity: 0;}
 }
