--- a/GameDi_st0.css
+++ b/GameDi_st0.css
@@ -5,6 +5,27 @@ body {
     background-color: rgb(92, 94, 228);
 }
 
+.GameDi-logo{
+    position: absolute;
+    width: 100%;
+    height: 3.4rem;
+    background-color: rgb(43, 42, 42);
+}
+
+.logo img{margin-right: 0.2rem;}
+
+.logo{
+    display: flex;
+    text-decoration: none;
+    color: antiquewhite;
+    font-size: 0.9rem;
+    align-items: flex-end;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
 .GameDi-button-start {
     display: flex;
     justify-content: center;
