--- a/css/GameDi_st0_test.css
+++ b/css/GameDi_st0_test.css
@@ -6,15 +6,17 @@ body {
 }
 
 .GameDi-logo{
-    position: absolute;
     width: 100%;
     height: 3.4rem;
     background-color: rgb(43, 42, 42);
 }
 
-.logo img{margin-right: 0.2rem;}
+.GameDi-logo-home{
+    position: absolute;
+    height: 3.4rem;
+}
 
-.logo{
+.GameDi-logo-home-link{
     display: flex;
     text-decoration: none;
     color: antiquewhite;
@@ -25,6 +27,8 @@ body {
     transform: translateY(-50%);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+.GameDi-logo-home-link img{margin-right: 0.2rem;}
 
 .GameDi-button-start {
     display: flex;
@@ -61,4 +65,56 @@ body {
 @keyframes move{
     from{transform: scale(1.1);}
     to{transform: scale(1.8); opacity: 0;}
+}
+
+/* 구역나누기 */
+
+#grid{
+    display: grid;
+    grid-template-columns: 135px 1fr;
+}
+
+/* 메뉴바 */
+.Game-MENU-bar{
+    margin: 0.5rem;
+    width: 125px;
+}
+ul {
+    list-style-type: none;
+    padding: 0.3rem;
+    width: 125px;
+    background-color: rgb(43, 42, 42);
+    cursor: pointer;
+}
+li {
+    display: block;
+    color: white;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+li:hover:not(.active) {
+    background-color: rgb(70, 69, 69);
+}
+#editbox{
+    font-size: 0.8rem;
+    text-align: center; 
+    background-color: gray; 
+    display: grid ;
+    grid-template-columns: 1fr 1fr; 
+}
+
+/* 게임 컨텐츠 */
+.GameDi-contents {
+    margin: 5px;
+    padding: 5px;
+}
+
+.MenuList li{
+    position: relative;
+}
+
+.MenuList input {
+    position: absolute;
+    top: 12px;
+    margin-left: -16px;
 }
